aws/app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: analyzer-app-service-ingress
  namespace: pvcy
spec:
  tls:
  - hosts:
    - app.pvcy.customer.com
    secretName: analyzer-app-secret
  rules:
  - host: app.pvcy.customer.com
    http:
      paths:
      - backend:
          serviceName: analyzer-app-service
          servicePort: 80
